# tulip_rs

./: .env  .gitignore  .gitmodules  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml  test_candle_examples.py
tulip_rs/: Cargo.toml  Cargo_w_candle_stick_examples.toml.bak  build.rs  build.rs.bak  generated_examples.toml
tulip_rs/docs/: pattern_authoring_guide.md
tulip_rs/examples/candle/fourbar/: ti_cdlbearishthreelinestrike_example.rs  ti_cdlbullishthreelinestrike_example.rs  ti_cdlconcealingbabyswallow_example.rs
tulip_rs/examples/candle/onebar/: ti_cdlbearishbelthold_example.rs  ti_cdlbearishstrongline_example.rs  ti_cdlbullishbelthold_example.rs  ti_cdlbullishstrongline_example.rs  ti_cdlgappingdowndoji_example.rs  ti_cdlgappingupdoji_example.rs  ti_cdlhammer_example.rs  ti_cdlhangingman_example.rs  ti_cdlnortherndoji_example.rs  ti_cdlonecandleshootingstar_example.rs  ti_cdlsoutherndoji_example.rs  ti_cdltakuriline_example.rs
tulip_rs/examples/candle/threebar/: ti_cdl2crows_example.rs  ti_cdl3blackcrows_example.rs  ti_cdl3insidedown_example.rs  ti_cdl3insideup_example.rs  ti_cdl3outsidedown_example.rs  ti_cdl3outsideup_example.rs  ti_cdl3starsinthesouth_example.rs  ti_cdl3whitesoldiers_example.rs  ti_cdladvanceblock_example.rs  ti_cdlbearabandonedbaby_example.rs  ti_cdlbearishtristar_example.rs  ti_cdlbearsidebysidewhitelines_example.rs  ti_cdlbullishabandonedbaby_example.rs  ti_cdlbullishtristar_example.rs  ti_cdlbullsidebysidewhitelines_example.rs  ti_cdlcollapsingdojistar_example.rs  ti_cdldeliberation_example.rs  ti_cdldownsidegapthreemethods_example.rs  ti_cdldownsidetasukigap_example.rs  ti_cdleveningdojistar_example.rs  ti_cdleveningstar_example.rs  ti_cdlidentical3crows_example.rs  ti_cdlmorningdojistar_example.rs  ti_cdlmorningstar_example.rs  ti_cdlunique3riverbottom_example.rs  ti_cdlupsidegap2crows_example.rs  ti_cdlupsidegapthreemethods_example.rs  ti_cdlupsidetasukigap_example.rs
tulip_rs/examples/candle/twobar/: ti_cdl2blackgappingcandles_example.rs  ti_cdl2candleshootingstar_example.rs  ti_cdlbearishdojistar_example.rs  ti_cdlbearishengulfing_example.rs  ti_cdlbearishharami_example.rs  ti_cdlbearishharamicross_example.rs  ti_cdlbearishmeetinglines_example.rs  ti_cdlbearishseparatinglines_example.rs  ti_cdlbearishtasukiline_example.rs  ti_cdlbullishdojistar_example.rs  ti_cdlbullishengulfing_example.rs  ti_cdlbullishharami_example.rs  ti_cdlbullishharamicross_example.rs  (+21 more)
tulip_rs/examples/indicators/: ti_ad_example.rs  ti_adosc_example.rs  ti_adx_example.rs  ti_adxr_example.rs  ti_ao_example.rs  ti_ao_medprice_example.rs  ti_apo_example.rs  ti_aroon_example.rs  ti_aroonosc_example.rs  ti_atr_example.rs  ti_avgprice_example.rs  ti_bbands_example.rs  ti_bop_example.rs  ti_cci_example.rs  ti_cmo_example.rs  ti_crossany_example.rs  ti_crossover_example.rs  ti_cvi_example.rs  ti_dema_example.rs  ti_di_example.rs  ti_dm_example.rs  ti_dpo_example.rs  ti_dx_example.rs  ti_ema_example.rs  ti_emv_example.rs  ti_fisher_example.rs  ti_fosc_example.rs  ti_hma_example.rs  ti_kama_example.rs  ti_kvo_example.rs  ti_linreg_example.rs  ti_macd_example.rs  ti_marketfi_example.rs  ti_mass_example.rs  ti_max_example.rs  ti_md_example.rs  ti_medprice_example.rs  ti_mfi_example.rs  ti_min_example.rs  ti_mom_example.rs  (+36 more)
tulip_rs/src/: cdlcommon.rs  cldcommontypes.rs  common.rs  common_simd.rs  indicator_types.rs  lib.rs  macros.rs  math.rs  math_simd.rs  types.rs
tulip_rs/src/candle_indicators/: candle_patterns.rs  common.rs  mod.rs  pattern_test.rs  perf_stats.rs  registry.rs  types.rs
tulip_rs/src/candle_types/: basic.rs  doji.rs  marubozu.rs  mod.rs  spinningtop.rs
tulip_rs/src/indicators/: ad.rs  adosc.rs  adx.rs  adxr.rs  ao.rs  ao_medprice.rs  apo.rs  aroon.rs  aroonosc.rs  atr.rs  avgprice.rs  bbands.rs  bop.rs  candlestick.rs  cci.rs  cmo.rs  cvi.rs  dema.rs  di.rs  dm.rs  dpo.rs  dx.rs  ema.rs  emv.rs  fisher.rs  fosc.rs  hma.rs  kama.rs  kvo.rs  linreg.rs  macd.rs  marketfi.rs  mass.rs  max.rs  md.rs  medprice.rs  mfi.rs  min.rs  mod.rs  mom.rs  (+36 more)
tulip_rs/src/ring_buffer/: buffer.rs  mod.rs
tulip_rs_macros/: Cargo.toml
tulip_rs_macros/src/: lib.rs  pattern_registry.rs  pattern_registry_example.rs
tulip_rs_shared/: Cargo.toml
tulip_rs_shared/src/: lib.rs
tulip_test/: .env  Cargo.toml  bench_stats.lo  build.rs  setup_talib.sh
tulip_test/benches/: benchmark_ad.rs  benchmark_adosc.rs  benchmark_adx.rs  benchmark_adxr.rs  benchmark_ao.rs  benchmark_ao_medprice.rs  benchmark_apo.rs  benchmark_aroon.rs  benchmark_aroonosc.rs  benchmark_atr.rs  benchmark_avgprice.rs  benchmark_bbands.rs  benchmark_bop.rs  benchmark_candle_stick_indicators.rs  benchmark_cci.rs  benchmark_cmo.rs  benchmark_cvi.rs  benchmark_dema.rs  benchmark_di.rs  benchmark_dm.rs  benchmark_dpo.rs  benchmark_dx.rs  benchmark_ema.rs  benchmark_emv.rs  benchmark_fisher.rs  benchmark_fosc.rs  benchmark_hma.rs  benchmark_kama.rs  benchmark_kvo.rs  benchmark_linreg.rs  benchmark_macd.rs  benchmark_marketfi.rs  benchmark_mass.rs  benchmark_max.rs  benchmark_md.rs  benchmark_medprice.rs  benchmark_mfi.rs  benchmark_min.rs  benchmark_mom.rs  benchmark_msw.rs  (+32 more)
tulip_test/docker/: docker-compose.yaml
tulip_test/docker/scripts/: 02_init_benchmark_db.sql
tulip_test/profiledata/: default_18380159652933129251_0.profraw
tulip_test/src/: benchmark_logger.rs  benchmark_utils.rs  c_bindings.rs  criterion_logger.rs  database.rs  lib.rs  talib_bindings.rs
tulip_test/tests/: ad_test.rs  adosc_test.rs  adx_test.rs  adxr_test.rs  ao_medprice_test.rs  ao_test.rs  apo_test.rs  aroon_test.rs  aroonosc_test.rs  atr_test.rs  avgprice_test.rs  bbands_test.rs  bop_test.rs  cci_test.rs  cmo_test.rs  cvi_test.rs  dema_test.rs  di_test.rs  dm_test.rs  dpo_test.rs  dx_test.rs  ema_test.rs  emv_test.rs  fisher_test.rs  fosc_test.rs  hma_test.rs  kama_test.rs  kvo_test.rs  linreg_test.rs  macd_test.rs  marketfi_test.rs  mass_test.rs  max_test.rs  md_test.rs  medprice_test.rs  mfi_test.rs  min_test.rs  mom_test.rs  msw_test.rs  natr_test.rs  (+31 more)
tulip_test/tulip_indicators/: tiamalgamation.c
(+648 files in other folders)
