[package]
name = "tulip_rs_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the TulipRS technical analysis library"
license = "MIT"
repository = "https://github.com/me60732/tulip_rs"


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
tulip_rs_shared = { path = "../tulip_rs_shared", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0"
